--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>v-todo</title><link href=/css/app.dc9a26ca.css rel=preload as=style><link href=/js/app.a331c5f4.js rel=preload as=script><link href=/js/chunk-vendors.e622eab0.js rel=preload as=script><link href=/css/app.dc9a26ca.css rel=stylesheet></head><body><noscript><strong>We're sorry but v-todo doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.e622eab0.js></script><script src=/js/app.a331c5f4.js></script></body></html>
+<!DOCTYPE html>
+<html lang=en>
+
+<head>
+  <meta charset=utf-8>
+  <meta http-equiv=X-UA-Compatible content="IE=edge">
+  <meta name=viewport content="width=device-width,initial-scale=1">
+  <link rel=icon href=/favicon.ico> <title>v-todo</title>
+  <link href=/v-todo/css/app.dc9a26ca.css rel=preload as=style>
+  <link href=/v-todo/js/app.a331c5f4.js rel=preload as=script>
+  <link href=/v-todo/js/chunk-vendors.e622eab0.js rel=preload as=script>
+  <link href=/v-todo/css/app.dc9a26ca.css rel=stylesheet>
+</head>
+
+<body><noscript><strong>We're sorry but v-todo doesn't work properly without JavaScript enabled. Please enable it to
+      continue.</strong></noscript>
+  <div id=app></div>
+  <script src=/js/chunk-vendors.e622eab0.js> </script> <script src=/js/app.a331c5f4.js> </script> </body> </html>
