--- a/index.html
+++ b/index.html
@@ -15,4 +15,4 @@
 <body><noscript><strong>We're sorry but v-todo doesn't work properly without JavaScript enabled. Please enable it to
       continue.</strong></noscript>
   <div id=app></div>
-  <script src=/js/chunk-vendors.e622eab0.js> </script> <script src=/js/app.a331c5f4.js> </script> </body> </html>
+  <script src=/v-todo/js/chunk-vendors.e622eab0.js> </script> <script src=/v-todo/js/app.a331c5f4.js> </script> </body> </html>
