edit favicon address in link tag

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset=utf-8>
   <meta http-equiv=X-UA-Compatible content="IE=edge">
   <meta name=viewport content="width=device-width,initial-scale=1">
-  <link rel=icon href=/favicon.ico> <title>v-todo</title>
+  <link rel=icon href=/v-todo/favicon.ico> <title>v-todo</title>
   <link href=/v-todo/css/app.dc9a26ca.css rel=preload as=style>
   <link href=/v-todo/js/app.a331c5f4.js rel=preload as=script>
   <link href=/v-todo/js/chunk-vendors.e622eab0.js rel=preload as=script>
