--- a/index.html
+++ b/index.html
@@ -6,13 +6,22 @@
   <meta http-equiv=X-UA-Compatible content="IE=edge">
   <meta name=viewport content="width=device-width,initial-scale=1">
   <link rel=icon href=/favicon.ico> <title>v-todo</title>
-  <link href=/v-todo/css/app.4291f2b3.css rel=preload as=style>
-  <link href=/v-todo/js/app.251021ed.js rel=preload as=script>
+  <link href=/v-todo/css/app.e408d68e.css rel=preload as=style>
+  <link href=/v-todo/js/app.88e73198.js rel=preload as=script>
   <link href=/v-todo/js/chunk-vendors.e622eab0.js rel=preload as=script>
-  <link href=/v-todo/css/app.4291f2b3.css rel=stylesheet>
+  <link href=/v-todo/css/app.e408d68e.css rel=stylesheet>
 </head>
 
 <body><noscript><strong>We're sorry but v-todo doesn't work properly without JavaScript enabled. Please enable it to
       continue.</strong></noscript>
   <div id=app></div>
-  <script src=/v-todo/js/chunk-vendors.e622eab0.js> </script> <script src=/v-todo/js/app.251021ed.js> </script> </body> </html>
+  <script src=/v-todo/js/chunk-vendors.e622eab0.js> </script> <script src=/v-todo/js/app.88e73198.js> </script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128387569-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-128387569-1');
+  </script>
+</body> </html>
